# turath-inveniordm

./: .gitignore  .invenio  Dockerfile  Pipfile  README.md  docker-compose.full.yml  docker-services.yml  invenio.cfg  package-lock.json  package.json  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json  invenio-setup.sh
.github/workflows/: docker-publish.yml
assets/js/: MiradorPreviewer.js  app.js
assets/js/invenio_app_rdm/previewer/: config.js
docker/nginx/: Dockerfile  nginx.conf  test.crt  test.key
docker/nginx/production/: Dockerfile  invenio.conf  nginx.conf
docker/pgadmin/: servers.json
docker/uwsgi/: uwsgi.ini  uwsgi_dev.ini
site/: .gitkeep  setup.cfg  setup.py
site/turath_inveniordm/: views.py  webpack.py
templates/previewers/: default.html  iiif_previewer.html
