
[metadata]
name = turath-inveniordm

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    turath_inveniordm_views = turath_inveniordm.views:create_blueprint
invenio_assets.webpack =
    turath_inveniordm_theme = turath_inveniordm.webpack:theme
