[metadata]
name = turath-inveniordm

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.apps =
    invenio_previewer_mirador = invenio_previewer_mirador:InvenioPreviewerMirador
invenio_base.blueprints =
    invenio_previewer_mirador = invenio_previewer_mirador.views:blueprint
invenio_assets.webpack =
    turath-inveniordm = turath_inveniordm.webpack:previewer
    invenio_previewer_mirador = invenio_previewer_mirador.webpack:mirador_theme